[gd_scene load_steps=5 format=3 uid="uid://din50gkoucxpp"]

[ext_resource type="Script" uid="uid://ew10v6pbwxv6" path="res://Scripts/MainMenu.gd" id="1_main_menu"]
[ext_resource type="Theme" uid="uid://dvwgvp8u8xo0i" path="res://Scenes/UI/Themes/UI_Theme.tres" id="1_mjmdf"]
[ext_resource type="Material" uid="uid://2wo2meekggrg" path="res://Scenes/Effects/StarBackground_Menu.tres" id="3_72sra"]
[ext_resource type="Script" uid="uid://c1e04v6b22eli" path="res://Scenes/UI/button_sounds.gd" id="4_t6w0q"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mjmdf")
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
material = ExtResource("3_72sra")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="GameTitle" type="Label" parent="."]
layout_mode = 2
offset_left = 295.0
offset_top = 142.5
offset_right = 857.0
offset_bottom = 223.5
theme_override_font_sizes/font_size = 72
text = "SPACE LOOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 462.0
offset_top = 294.0
offset_right = 690.0
offset_bottom = 504.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Spacer1" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="StartButton" type="Button" parent="PanelContainer/VBoxContainer" groups=["Button"]]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "START GAME"
script = ExtResource("4_t6w0q")

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer" groups=["Button"]]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "SETTINGS"
script = ExtResource("4_t6w0q")

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer" groups=["Button"]]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "EXIT"
script = ExtResource("4_t6w0q")

[connection signal="pressed" from="PanelContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
